--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -14,7 +14,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/login"
+        android:text="login"
         android:textSize="32sp"
 
 
@@ -25,7 +25,7 @@
         android:layout_width="300sp"
         android:layout_height="48sp"
         android:layout_marginTop="30sp"
-        android:hint="@string/masukan_username"
+        android:hint="masukan_username"
         android:inputType="textPersonName"
         android:background="@drawable/form"
         android:autofillHints="username" />
@@ -35,7 +35,7 @@
         android:layout_width="300sp"
         android:layout_height="48sp"
         android:layout_marginTop="10sp"
-        android:hint="@string/masukan_password"
+        android:hint="masukan_password"
         android:ems="10"
         android:inputType="textPassword"
         android:background="@color/form"
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="90sp"
         android:layout_marginTop="10sp"
-        android:text="@string/remember_me"
+        android:text="remember_me"
         />
 
     <TextView
@@ -57,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="90sp"
-        android:text="@string/forgot_password"
+        android:text="forgot_password"
         />
         <Button
             android:id="@+id/btn_login"
@@ -65,7 +65,7 @@
             android:layout_height="35sp"
             android:layout_marginTop="10sp"
             android:gravity="center"
-            android:text="@string/login"
+            android:text="login"
             android:textSize="15sp"
             android:background="@drawable/button"
             android:textColor="@color/white"/>
@@ -82,7 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15sp"
             android:layout_marginEnd="120sp"
-            android:text="@string/do_not_have_account" />
+            android:text="do_not_have_account" />
 
 
         <Button
@@ -91,7 +91,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15sp"
             android:background="@color/white"
-            android:text="@string/signup"
+            android:text="signup"
             android:textColor="#CE0F1A" />
     </LinearLayout>
     </LinearLayout>
