--- a/app/src/main/res/layout/recycler_home.xml
+++ b/app/src/main/res/layout/recycler_home.xml
@@ -5,27 +5,34 @@
     android:layout_height="wrap_content"
     android:layout_margin="10dp">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="16dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/circle_photo"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:src="@color/button"
+            app:civ_border_color="@color/black"
             app:civ_border_width="3dp"
-            app:civ_border_color="@color/black"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/txt_items_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
-            android:layout_marginTop="10dp"
-            android:layout_below="@id/circle_photo" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/circle_photo"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:gravity="center"/>
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
