--- a/app/src/main/res/layout/recycler_jam_tanggal.xml
+++ b/app/src/main/res/layout/recycler_jam_tanggal.xml
@@ -2,7 +2,10 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp">
+    android:layout_marginEnd="15dp"
+    android:layout_marginTop="1dp"
+    android:layout_marginStart="1dp"
+    android:layout_marginBottom="1dp">
 
     <RelativeLayout
         android:layout_width="wrap_content"
