--- a/app/src/main/res/layout/fragment_gor_list.xml
+++ b/app/src/main/res/layout/fragment_gor_list.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".fragment.ChatFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragment.GorListFragment">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_chat"
+        android:id="@+id/toolbar_gor_list"
         style="@style/Theme.AppCompat"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -20,28 +19,13 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_home"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_chat">
-
-        <ImageView
-            android:id="@+id/img_coming_soon_history"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:src="@drawable/coming_soon" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Chat akan segera hadir"
-            android:textStyle="bold"/>
-
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_gor_list" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
